--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -4,19 +4,21 @@
 	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
-	--color-bg-0: rgb(202, 216, 228);
-	--color-bg-1: hsl(209, 36%, 86%);
-	--color-bg-2: hsl(224, 44%, 95%);
-	--color-theme-1: #ff3e00;
-	--color-theme-2: #4075a6;
-	--color-text: rgba(0, 0, 0, 0.7);
-	--column-width: 42rem;
-	--column-margin-top: 4rem;
-	font-family: var(--font-body);
-	color: var(--color-text);
+
+	--primary-color: #f39a00;
+
+	--text-color: #000;
+}
+
+/* Some normalizes */
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
 }
 
 body {
+	font-family: var(--font-body);
 	min-height: 100vh;
 	margin: 0;
 	background-attachment: fixed;
@@ -41,12 +43,12 @@ p {
 }
 
 a {
-	color: var(--color-theme-1);
+	color: var(--primary-color);
 	text-decoration: none;
 }
 
 a:hover {
-	text-decoration: underline;
+	text-decoration: none;
 }
 
 h1 {
@@ -66,7 +68,7 @@ pre {
 	box-shadow: 2px 2px 6px rgb(255 255 255 / 25%);
 	padding: 0.5em;
 	overflow-x: auto;
-	color: var(--color-text);
+	color: var(--text-color);
 }
 
 .text-column {
